--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 <body id=home_body>
   <dev>
       <div class="topnav">
-          <a class="active" href="our_developer.html">Home</a>
-          <a href="index.html">Our Developers</a>
+          <a class="active" href="index.html">Home</a>
+          <a href="our_developer.html">Our Developers</a>
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
