--- a/our_developer.html
+++ b/our_developer.html
@@ -45,8 +45,8 @@
 <body id=home_body>
   <dev>
       <div class="topnav">
-          <a class="active" href="#home">Home</a>
-          <a href="#news">Our Developers</a>
+          <a href="index.html">Home</a>
+          <a class="active"  href="#news">Our Developers</a>
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
