--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
    background-size:cover;
 }
 .glow-on-hover {
+  font-size: large;
   margin: 10px;
   align-content: center;
-    width: 220px;
-    height: 50px;
+    width: 300px;
+    height: 70px;
     border: none;
     outline: none;
     color: #fff;
@@ -112,6 +113,11 @@
 </style>
   </header>
 <body id=home_body>
+  <center>
+      <div style="margin-top: 100px;">
+          <img src="logo.png" />
+      </div>
+  </center>
   <dev>
       <div class="topnav">
           <a class="active" href="index.html">Home</a>
