--- a/our_developer.html
+++ b/our_developer.html
@@ -5,7 +5,7 @@
 <style>
   /* Add a black background color to the top navigation */
 .topnav {
-  background-color: rgb(80, 35, 243);;
+  background-color: #038DFE;
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
@@ -36,7 +36,7 @@ img{
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: rgb(46, 137, 255);
+  background-color: rgb(5, 67, 148);
   color: white;
   border-bottom: 3px solid rgb(3, 3, 3);
 }
