--- a/our_developer.html
+++ b/our_developer.html
@@ -169,7 +169,7 @@ button:hover, a:hover {
       <div class="topnav" style="margin: 0px;">
           <a href="index.html">Home</a>
           <a class="active"  href="#news">Our Developers</a>
-          <a href="#contact">Contact</a>
+          <a href="contact_form.html">Contact</a>
           <a href="#about">About</a>
         </div>
         <center>
@@ -225,7 +225,7 @@ button:hover, a:hover {
                     <div class="flex-container">
                         <div class="card">
                             <img src="image/women.png" alt="John" style="width:100%; height: 200px;border-width: 5px;border-color: #000" id="userImage">
-                            <h1>Bouchra</h1>
+                            <h1>Developer</h1>
                             <p class="title">Web Developer/Web designer</p>
                             <p>Harvard University</p>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -236,7 +236,7 @@ button:hover, a:hover {
                           </div>
                           <div class="card">
                               <img src="image/women2.png" alt="John" style="width:100%; height: 200px;border-width: 5px;border-color: #000" id="userImage">
-                              <h1>Sara</h1>
+                              <h1>Developer</h1>
                               <p class="title">CEO & Founder, Example</p>
                               <p>Harvard University</p>
                               <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -247,7 +247,7 @@ button:hover, a:hover {
                             </div>
                             <div class="card">
                                 <img src="image/women3.png" alt="John" style="width:100%; height: 200px;border-width: 5px;border-color: #000" id="userImage">
-                                <h1>Zineb</h1>
+                                <h1>Developer</h1>
                                 <p class="title">CEO & Founder, Example</p>
                                 <p>Harvard University</p>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -258,7 +258,7 @@ button:hover, a:hover {
                               </div>
                               <div class="card">
                                   <img src="image/women4.png" alt="John" style="width:100%; height: 200px;border-width: 5px;border-color: #000" id="userImage">
-                                  <h1>Iman</h1>
+                                  <h1>developer</h1>
                                   <p class="title">CEO & Founder, Example</p>
                                   <p>Harvard University</p>
                                   <a href="#"><i class="fa fa-dribbble"></i></a>
